Removed unused parsers.